--- a/src/UI/Web/Web.config
+++ b/src/UI/Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-GiveIT.UI.Web-20130520184752;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-GiveIT.UI.Web-20130520184752.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=GiveITUIWeb;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\GiveIT.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
